--- a/style.css
+++ b/style.css
@@ -1,7 +1,71 @@
 @import url('https://fonts.googleapis.com/css2?family=Amatic+SC&family=Orbitron&family=Satisfy&display=swap');
 
+body{
+    padding: 0;
+    margin: 0;
+}
 
+#content{
+    display: flex;
+}
+
+#imgDiv{
+    width: 35vw;
+    height: 100vh;
+    position: relative;
+}
+
+#imgDiv > #pic{
+    position: absolute;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    max-width:100%;
+    z-index: -1;
+    
+}
+
+#imgDiv > #logoContainer{
+    background: rgb(22, 22, 22);
+    opacity: 0.3;
+    position: relative;
+    top: 4%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
+}
 
 h1{
     font-family: 'Amatic SC', sans-serif;
+    font-size:5rem;
 }
+
+#leftContent{
+    width: 65vw;
+    height: 100vh;
+    background-color: rgb(174, 191, 197);
+    box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
+
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    /* justify-content: space-around; */
+}
+
+#leftContent h2{
+    font-family: 'Amatic SC', sans-serif;
+    font-size:3rem;
+    align-self: center;
+
+}
+
+#leftContent > #formContent{
+    width: 100%;
+    height: 40%;
+    background-color: white;
+    box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
+    align-content: center;
+}
+
